feat: delete generated image in selected style
